@@ -1,4 +1,14 @@
-### fix(*): Correcting typos (HEAD)
+### refactor(tests): Refactored and optimized code for tests (HEAD)
+>Thu, 11 Apr 2024 14:20:59 +0200
+
+>Author: Emile-Muller (emile.muller.contact@gmail.com)
+
+>Commiter: Emile-Muller (emile.muller.contact@gmail.com)
+
+
+
+
+### fix(*): Correcting typos
 >Thu, 11 Apr 2024 14:17:42 +0200
 
 >Author: Emile-Muller (emile.muller.contact@gmail.com)
